tmp_p2/objects/Product2/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <label>Clase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subfamilia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-Accent Chairs</fullName>
            </value>
            <value>
                <fullName>02-Coffee &amp; Side &amp; End Tables</fullName>
            </value>
            <value>
                <fullName>03-Sofas &amp; Couches</fullName>
            </value>
            <value>
                <fullName>04-Sectional Sofas</fullName>
            </value>
            <value>
                <fullName>05-Loveseats</fullName>
            </value>
            <value>
                <fullName>06-Sofa Beds</fullName>
            </value>
            <value>
                <fullName>07-Benches &amp; Ottomans</fullName>
            </value>
            <value>
                <fullName>08-Recliners</fullName>
            </value>
            <value>
                <fullName>09-Console Tables &amp; Sideboards</fullName>
            </value>
            <value>
                <fullName>10-Tv Stands &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>11-Storage Furniture</fullName>
            </value>
            <value>
                <fullName>01-Dining Chairs</fullName>
            </value>
            <value>
                <fullName>02-Dining Tables</fullName>
            </value>
            <value>
                <fullName>03-Dining Sets</fullName>
            </value>
            <value>
                <fullName>04-Bar Stools</fullName>
            </value>
            <value>
                <fullName>05-Kitchen Carts &amp; Islands</fullName>
            </value>
            <value>
                <fullName>06-Dining Storage</fullName>
            </value>
            <value>
                <fullName>01-Office Chairs</fullName>
            </value>
            <value>
                <fullName>02-Desks</fullName>
            </value>
            <value>
                <fullName>03-Bookcases</fullName>
            </value>
            <value>
                <fullName>04-Office Storage</fullName>
            </value>
            <value>
                <fullName>01-Closet Storage</fullName>
            </value>
            <value>
                <fullName>02-Shoe Storage</fullName>
            </value>
            <value>
                <fullName>03-Storage Carts &amp; Drawers</fullName>
            </value>
            <value>
                <fullName>04-Storage Bins &amp; Boxes</fullName>
            </value>
            <value>
                <fullName>05-Shelving Units</fullName>
            </value>
            <value>
                <fullName>01-Outdoor Dining Sets</fullName>
            </value>
            <value>
                <fullName>02-Outdoor Seating Sets</fullName>
            </value>
            <value>
                <fullName>03-Outdoor Chairs &amp; Loungers</fullName>
            </value>
            <value>
                <fullName>04-Outdoor Tables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>