tmp_p2/objects/Product2/fields/Nombre_Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Fabrica__c</fullName>
    <formula>Fabrica__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fábrica</label>
    <type>Text</type>
</CustomField>