tmp_p2/objects/Product2/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product Name (in Spanish)</description>
    <inlineHelpText>Product Name (in Spanish)</inlineHelpText>
    <label>Spanish Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>