tmp_p2/objects/Product2/fields/Tech_URL_Descarga_Img3__c.field-meta.xml
<CustomField>
    <fullName>Tech_URL_Descarga_Img3__c</fullName>
    <description>URL temporal para descargar la imagen vía Batch.</description>
    <label>Tech URL Descarga Img 3</label>
    <type>Url</type>
</CustomField>