tmp_p2/objects/Product2/recordTypes/OpcionDePackaging.recordType-meta.xml
<RecordType>
    <fullName>OpcionDePackaging</fullName>
    <active>true</active>
    <description>Use este tipo de registro para las opciones adicionales de packaging de un producto de fábrica</description>
    <label>3-Opción de Packaging</label>
</RecordType>