tmp_p2/objects/Product2/recordTypes/ProductoDeFabrica.recordType-meta.xml
<RecordType>
    <fullName>ProductoDeFabrica</fullName>
    <active>true</active>
    <description>Use este tipo de registro para los productos producidos por una fábrica</description>
    <label>2-Producto de Fábrica</label>
</RecordType>