tmp_p2/objects/Product2/recordTypes/Prospecto_de_Producto.recordType-meta.xml
<RecordType>
    <fullName>Prospecto_de_Producto</fullName>
    <active>true</active>
    <description>Para uso en las Ferias</description>
    <label>Prospecto de Producto</label>
</RecordType>