tmp_p2/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Clase__c</columns>
    <columns>Nombre_Fabrica__c</columns>
    <columns>Listado_en_catalogo__c</columns>
    <columns>Codigo_EAN__c</columns>
    <columns>Codigo_EAN2__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>