tmp_p2/objects/Product2/listViews/Inactive_Products.listView-meta.xml
<ListView>
    <fullName>Inactive_Products</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tech_Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Products</label>
    <sharedTo>
        <role>Gerencia_Compras</role>
        <role>Gerencia_General</role>
        <role>Super_Compras</role>
    </sharedTo>
</ListView>