tmp_p2/objects/Product2/listViews/Nuevos_Productos_ltimos_30_d_as.listView-meta.xml
<ListView>
    <fullName>Nuevos_Productos_ltimos_30_d_as</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>CodigoDeProductoBase__c</columns>
    <columns>Thumb1__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2026 12:00 AM</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>H-!DEA Home</value>
    </filters>
    <label>New Products 2023</label>
</ListView>