tmp_p2/objects/Product2/listViews/Productos_Daft.listView-meta.xml
<ListView>
    <fullName>Productos_Daft</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tech_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Products</label>
    <sharedTo>
        <role>Gerencia_Compras</role>
        <role>Super_Compras</role>
    </sharedTo>
</ListView>